--- a/package.json
+++ b/package.json
@@ -11,17 +11,21 @@
   "dependencies": {
     "@radix-ui/react-slot": "^1.1.1",
     "axios": "^1.7.9",
+    "chart.js": "^4.4.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "firebase": "^11.2.0",
+    "flowbite-react": "^0.10.2",
     "framer-motion": "^12.4.1",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.474.0",
     "mongoose": "^8.10.0",
     "next": "15.1.6",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-cryptocoins": "^1.0.11",
     "react-dom": "^19.0.0",
+    "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7"
   },
