--- a/package.json
+++ b/package.json
@@ -9,12 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aptos-labs/ts-sdk": "^1.35.0",
+    "@aptos-labs/wallet-adapter-ant-design": "^3.1.0",
+    "@aptos-labs/wallet-adapter-react": "^3.8.0",
     "@emailjs/browser": "^4.4.1",
+    "@google-pay/button-react": "^3.1.0",
     "@radix-ui/react-slot": "^1.1.1",
     "axios": "^1.7.9",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.0",
+    "body-parser": "^1.20.3",
     "chart.js": "^4.4.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
     "firebase": "^11.2.0",
     "flowbite-react": "^0.10.2",
     "framer-motion": "^12.4.3",
@@ -22,13 +32,15 @@
     "lucide-react": "^0.474.0",
     "mongoose": "^8.10.0",
     "next": "15.1.6",
+    "paytmchecksum": "^1.5.1",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-cryptocoins": "^1.0.11",
     "react-dom": "^19.0.0",
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "web3": "^4.16.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
