--- a/package.json
+++ b/package.json
@@ -14,8 +14,13 @@
     "@aptos-labs/wallet-adapter-react": "^3.8.0",
     "@emailjs/browser": "^4.4.1",
     "@google-pay/button-react": "^3.1.0",
+    "@google/generative-ai": "^0.24.0",
+    "@paypal/react-paypal-js": "^8.8.2",
     "@radix-ui/react-slot": "^1.1.1",
-    "axios": "^1.7.9",
+    "@solana/wallet-adapter-react": "^0.15.36",
+    "@solana/wallet-adapter-wallets": "^0.19.33",
+    "@solana/web3.js": "^1.98.0",
+    "axios": "^1.8.4",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.0",
     "body-parser": "^1.20.3",
@@ -32,11 +37,13 @@
     "lucide-react": "^0.474.0",
     "mongoose": "^8.10.0",
     "next": "15.1.6",
+    "openai": "^4.87.3",
     "paytmchecksum": "^1.5.1",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-cryptocoins": "^1.0.11",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
