--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@google/generative-ai": "^0.24.0",
     "@paypal/react-paypal-js": "^8.8.2",
     "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-toast": "^1.2.6",
     "@solana/wallet-adapter-react": "^0.15.36",
+    "@solana/wallet-adapter-react-ui": "^0.9.36",
     "@solana/wallet-adapter-wallets": "^0.19.33",
     "@solana/web3.js": "^1.98.0",
     "axios": "^1.8.4",
@@ -39,11 +41,13 @@
     "next": "15.1.6",
     "openai": "^4.87.3",
     "paytmchecksum": "^1.5.1",
-    "react": "^19.0.0",
+    "pino-pretty": "^13.0.0",
+    "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-cryptocoins": "^1.0.11",
-    "react-dom": "^19.0.0",
+    "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
+    "react-toastify": "^11.0.5",
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
