--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@paypal/react-paypal-js": "^8.8.2",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.6",
+    "@react-spring/web": "^9.7.5",
     "@solana/wallet-adapter-react": "^0.15.36",
     "@solana/wallet-adapter-react-ui": "^0.9.36",
     "@solana/wallet-adapter-wallets": "^0.19.33",
@@ -48,6 +49,7 @@
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
     "react-toastify": "^11.0.5",
+    "react-use-gesture": "^9.1.3",
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
