--- a/package.json
+++ b/package.json
@@ -44,17 +44,20 @@
     "openai": "^4.87.3",
     "paytmchecksum": "^1.5.1",
     "pino-pretty": "^13.0.0",
+    "qrcode.react": "^4.2.0",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-cryptocoins": "^1.0.11",
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
+    "react-qr-reader": "^3.0.0-beta-1",
     "react-toastify": "^11.0.5",
     "react-use-gesture": "^9.1.3",
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
-    "web3": "^4.16.0"
+    "web3": "^4.16.0",
+    "ws": "^8.18.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
