--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.1.0",
     "web3": "^4.16.0",
     "ws": "^8.18.1"
   },
