--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@aptos-labs/ts-sdk": "^1.35.0",
     "@aptos-labs/wallet-adapter-ant-design": "^3.1.0",
     "@aptos-labs/wallet-adapter-react": "^3.8.0",
+    "@blackbox-vision/react-qr-reader": "^5.0.0",
     "@emailjs/browser": "^4.4.1",
     "@google-pay/button-react": "^3.1.0",
     "@google/generative-ai": "^0.24.0",
@@ -37,6 +38,7 @@
     "firebase": "^11.2.0",
     "flowbite-react": "^0.10.2",
     "framer-motion": "^12.4.3",
+    "html5-qrcode": "^2.3.8",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.474.0",
     "mongoose": "^8.10.0",
@@ -44,6 +46,7 @@
     "openai": "^4.87.3",
     "paytmchecksum": "^1.5.1",
     "pino-pretty": "^13.0.0",
+    "qrcode-generator": "^1.4.4",
     "qrcode.react": "^4.2.0",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
@@ -54,6 +57,8 @@
     "react-toastify": "^11.0.5",
     "react-use-gesture": "^9.1.3",
     "recharts": "^2.15.1",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^11.1.0",
