--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "input-otp": "^1.4.2",
     "lucide-react": "^0.474.0",
     "mongoose": "^8.10.0",
-    "next": "15.1.6",
+    "next": "^15.1.6",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.10.1",
     "openai": "^4.87.3",
@@ -47,10 +47,10 @@
     "pino-pretty": "^13.0.0",
     "qrcode-generator": "^1.4.4",
     "qrcode.react": "^4.2.0",
-    "react": "^18.2.0",
+    "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
     "react-cryptocoins": "^1.0.11",
-    "react-dom": "^18.2.0",
+    "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.2",
     "react-qr-reader": "^3.0.0-beta-1",
     "react-toastify": "^11.0.5",
